kubernetes/cloudmart-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudmart-ingress
  namespace: cloudmart
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: cloudmart.192.168.1.240.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cloudmart-frontend
            port:
              number: 3000
  - host: api.cloudmart.192.168.1.240.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cloudmart-backend
            port:
              number: 8080
